# Subsense-BCI-RD

./: .cursorrules  .gitignore  RD_LOG.md  README.md  pyproject.toml  requirements.txt  run_demo.py
.cursor/rules/: physics.mdc  python.mdc  signals.mdc
configs/: default_sim.yaml
data/processed/: .gitkeep  correlation_matrix.npy  recovered_sources.npy
data/raw/: .gitkeep
notebooks/: .gitkeep  realtime_dashboard.py  validate_phase1.py  validate_unmixing.py  visualize_cloud.py  visualize_signals.py
src/: __init__.py
src/filtering/: __init__.py  unmixing.py
src/physics/: constants.py  transfer_function.py
src/simulation/: .cursorrules  cloud_generator.py  source_generator.py  time_series.py
src/subsense_bci/: __init__.py  config.py
src/subsense_bci/dashboard/: __init__.py  streamlit_app.py
src/subsense_bci/filtering/: __init__.py  adaptive_filter.py  online_decoder.py  unmixing.py
src/subsense_bci/physics/: __init__.py  constants.py  transfer_function.py
src/subsense_bci/presets/: __init__.py  demo_presets.py
src/subsense_bci/simulation/: __init__.py  cloud_generator.py  sensor_cloud.py  source_generator.py  streamer.py  time_series.py
src/subsense_bci/validation/: __init__.py  input_validators.py
src/subsense_bci/visualization/: __init__.py  theme.py
tests/: __init__.py  test_heartbeat_stress.py  test_physics.py  test_unmixing.py  test_validation.py
